# Legal-MCP-public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  TODOS.md  docker-compose.build.yml  docker-compose.demo.yml  docker-compose.feishu.yml  docker-compose.langfuse.yml  docker-compose.yml  install.sh  pyproject.toml
Docs/: agent-observability.md  client-setup.md  team-deployment.md
Docs/strategy/: 2026-06-06-open-source-pivot.md  2026-06-06-permission-aware-mcp-gateway-plan.md  2026-06-13-v0.5-plan.md  (+9 more)
scripts/: load-offline-images.sh  prepare-offline-images.sh
tests/: test_admin_observability.py  test_admin_server.py  test_agent_config.py  test_agent_fast_path.py  test_agent_graph.py  test_agent_observability.py  test_agent_retry.py  test_agent_router.py  test_agent_steps.py  test_agent_turn_isolation.py  test_ai_provider.py  test_audit.py  test_cli.py  test_company_seal_local_demo.py  test_connector_config.py  test_connector_retrieval.py  test_connectors.py  test_conversation_context.py  test_data_source_crud.py  test_data_source_wizard.py  test_deployment_files.py  test_disclosure_audit.py  test_disclosure_leakage.py  test_feishu_client.py  test_feishu_connector.py  test_feishu_mixed_e2e.py  test_field_semantics.py  test_http_server.py  test_identity.py  test_identity_e2e.py  test_identity_match.py  test_identity_resolver.py  test_identity_rewrite.py  test_import_pipeline.py  test_installer_docs.py  test_legal_demo_example.py  test_local_file_connector.py  test_lookup.py  test_mcp_protocol.py  test_mcp_server.py  (+20 more)
(+89 files in other folders)
